feat: Documentation for POST /dirs
